--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -40,6 +40,48 @@ The geeky details of what you get:
 
 To enable {{prodname}} network policy enforcement on an EKS cluster using the AWS VPC CNI plugin, follow these step-by-step instructions: [Installing Calico on Amazon EKS](https://docs.aws.amazon.com/eks/latest/userguide/calico.html)
 
+
+1. First, create an Amazon EKS cluster.
+
+   ```bash
+   eksctl create cluster --name  <my-calico-cluster>
+   ```
+
+1. Install the operator.
+
+   ```bash
+   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
+   ```
+
+1. Configure the {{prodname}} installation.
+
+   ```bash
+   kubectl create -f - <<EOF
+   kind: Installation
+   apiVersion: operator.tigera.io/v1
+   metadata:
+     name: default
+   spec:
+     kubernetesProvider: EKS
+     cni:
+       type: AmazonVPC
+     calicoNetwork:
+       bgp: Disabled
+   EOF
+   ```
+
+1. Confirm installation by checking the `STATUS`, your cluster nodes should have a `Ready` status. 
+
+   ```
+   kubectl get nodes -o wide
+   ```
+   
+   It should return something like the following.
+   
+   ```
+   NAME              STATUS   ROLES    AGE   VERSION   INTERNAL-IP   EXTERNAL-IP   OS-IMAGE             KERNEL-VERSION    CONTAINER-RUNTIME
+   <your-hostname>   Ready    master   52m   v1.12.2   10.128.0.28   <none>        Ubuntu 18.04.1 LTS   4.15.0-1023-gcp   docker://18.6.1
+   ```
 ### Install EKS with {{prodname}} networking
 
 The geeky details of what you get:
